fix: align the save button to the size of the form in setting

--- a/client/src/styles/Button.css
+++ b/client/src/styles/Button.css
@@ -16,3 +16,9 @@ button {
 .logout__button {
   text-align: left;
 }
+
+.setting__submit-button {
+  width: 70%;
+  height: 40px;
+  font-size: medium;
+}
